my.css
/* Put your custom CSS here */
.ui-li-desc { margin: 0em; }

/* data-theme='g' Green button */
.ui-btn-up-g, .ui-btn-hover-g, .ui-btn-down-g
{
  color: white;
  font-weight: bold;
  text-decoration: none;
}
 
.ui-btn-up-g
{
  border: 1px solid #397114;
  background: #5aab25;
  text-shadow: 0 -1px 1px #397114;
  background-image: -moz-linear-gradient(top, #7ec44f, #5aab25);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #87c45e), color-stop(1, #619e39));
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#7ec44f', EndColorStr='#5aab25')";
}
 
.ui-btn-hover-g
{
  border: 1px solid #2c6e00;
  background: #75b54a;
  text-shadow: 0 -1px 1px #2a6901;
  background-image: -moz-linear-gradient(top, #99d472, #75b54a);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #99d472), color-stop(1, #75b54a));
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#99d472', EndColorStr='#75b54a')";
}
 
.ui-btn-down-g
{
  border: 1px solid #457823;
  background: #7ec44f;
  text-shadow: 0 -1px 1px #457823;
  background-image: -moz-linear-gradient(top, #619e39, #7ec44f);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #619e39), color-stop(1, #7ec44f));
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#619e39', EndColorStr='#7ec44f')";
}
 
.ui-btn-up-g, .ui-btn-hover-g, .ui-btn-down-g
{
  color: white;
  font-weight: bold;
  text-decoration: none;
}


/* data-theme='r' Red button */
.ui-btn-up-r, .ui-btn-hover-r, .ui-btn-down-r {
  color: white;
  font-weight: bold;
  text-decoration: none; }
 
.ui-btn-up-r {
  border: 1px solid #711414;
  background: #ab2525;
  text-shadow: 0 -1px 1px #711414;
  background-image: -moz-linear-gradient(top, #c44f4f, #ab2525);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #c45e5e), color-stop(1, #9e3939));
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#c44f4f', EndColorStr='#ab2525')"; }
 
.ui-btn-hover-r {
  border: 1px solid #6e0000;
  background: #b54a4a;
  text-shadow: 0 -1px 1px #690101;
  background-image: -moz-linear-gradient(top, #d47272, #b54a4a);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #d47272), color-stop(1, #b54a4a));
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#d47272', EndColorStr='#b54a4a')"; }
 
.ui-btn-down-r {
  border: 1px solid #782323;
  background: #c44f4f;
  text-shadow: 0 -1px 1px #782323;
  background-image: -moz-linear-gradient(top, #9e3939, #c44f4f);
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #9e3939), color-stop(1, #c44f4f));
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#9e3939', EndColorStr='#c44f4f')"; }

li {
  font-weight: normal !important;
}

li.ui-li.ui-li-divider.ui-bar-b {
  font-weight: bold !important;
}

/* C
-----------------------------------------------------------------------------------------------------------*/
/* Bar: Toolbars, dividers, slider track */
.ui-bar-c,
.ui-page-theme-c .ui-bar-inherit,
html .ui-bar-c .ui-bar-inherit,
html .ui-body-c .ui-bar-inherit,
html body .ui-group-theme-c .ui-bar-inherit {
	background-color: #e9e9e9 /*{c-bar-background-color}*/;
	border-color: #dddddd /*{c-bar-border}*/;
	color: #333333 /*{c-bar-color}*/;
	text-shadow: 0 /*{c-bar-shadow-x}*/ 1px /*{c-bar-shadow-y}*/ 0 /*{c-bar-shadow-radius}*/ #eeeeee /*{c-bar-shadow-color}*/;
	font-weight: bold;
}
.ui-bar-c {
	border-width: 1px;
	border-style: solid;
}
/* Page and overlay */
.ui-overlay-c,
.ui-page-theme-c,
.ui-page-theme-c .ui-panel-wrapper {
	background-color: #f9f9f9 /*{c-page-background-color}*/;
	border-color: #bbbbbb /*{c-page-border}*/;
	color: #333333 /*{c-page-color}*/;
	text-shadow: 0 /*{c-page-shadow-x}*/ 1px /*{c-page-shadow-y}*/ 0 /*{c-page-shadow-radius}*/ #f3f3f3 /*{c-page-shadow-color}*/;
}
/* Body: Read-only lists, text inputs, collapsible content */
.ui-body-c,
.ui-page-theme-c .ui-body-inherit,
html .ui-bar-c .ui-body-inherit,
html .ui-body-c .ui-body-inherit,
html body .ui-group-theme-c .ui-body-inherit,
html .ui-panel-page-container-c {
	background-color: #ffffff /*{c-body-background-color}*/;
	border-color: #dddddd /*{c-body-border}*/;
	color: #333333 /*{c-body-color}*/;
	text-shadow: 0 /*{c-body-shadow-x}*/ 1px /*{c-body-shadow-y}*/ 0 /*{c-body-shadow-radius}*/ #f3f3f3 /*{c-body-shadow-color}*/;
}
.ui-body-c {
	border-width: 1px;
	border-style: solid;
}
/* Links */
.ui-page-theme-c a,
html .ui-bar-c a,
html .ui-body-c a,
html body .ui-group-theme-c a {
	color: #3388cc /*{c-link-color}*/;
	font-weight: bold;
}
.ui-page-theme-c a:visited,
html .ui-bar-c a:visited,
html .ui-body-c a:visited,
html body .ui-group-theme-c a:visited {
    color: #3388cc /*{c-link-visited}*/;
}
.ui-page-theme-c a:hover,
html .ui-bar-c a:hover,
html .ui-body-c a:hover,
html body .ui-group-theme-c a:hover {
	color: #005599 /*{c-link-hover}*/;
}
.ui-page-theme-c a:active,
html .ui-bar-c a:active,
html .ui-body-c a:active,
html body .ui-group-theme-c a:active {
	color: #005599 /*{c-link-active}*/;
}
/* Button up */
.ui-page-theme-c .ui-btn,
html .ui-bar-c .ui-btn,
html .ui-body-c .ui-btn,
html body .ui-group-theme-c .ui-btn,
html head + body .ui-btn.ui-btn-c,
/* Button visited */
.ui-page-theme-c .ui-btn:visited,
html .ui-bar-c .ui-btn:visited,
html .ui-body-c .ui-btn:visited,
html body .ui-group-theme-c .ui-btn:visited,
html head + body .ui-btn.ui-btn-c:visited {
	background-color: #ff1c24 /*{c-bup-background-color}*/;
	border-color: #8c0f13 /*{c-bup-border}*/;
	color: #ffffff /*{c-bup-color}*/;
	text-shadow: 0 /*{c-bup-shadow-x}*/ 1px /*{c-bup-shadow-y}*/ 0 /*{c-bup-shadow-radius}*/ #444444 /*{c-bup-shadow-color}*/;
}
/* ... */

